--- a/Env/environment.yml
+++ b/Env/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
   - _py-xgboost-mutex=2.0=cpu_0
+  - _sysroot_linux-64_curr_repodata_hack=3=haa98f57_10
   - _tflow_select=2.3.0=mkl
   - abseil-cpp=20210324.2=h2531618_0
   - absl-py=0.13.0=py39h06a4308_0
@@ -21,10 +22,10 @@ dependencies:
   - brotlipy=0.7.0=py39h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2022.10.11=h06a4308_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - cached-property=1.5.2=py_0
   - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2022.9.24=py39h06a4308_0
+  - certifi=2022.12.7=py39h06a4308_0
   - cffi=1.14.6=py39h400218f_0
   - chardet=3.0.4=py39h06a4308_1003
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
@@ -33,13 +34,11 @@ dependencies:
   - cryptography=3.4.7=py39hd23ed53_0
   - cython=0.29.24=py39h295c915_0
   - dataclasses=0.8=pyh6d0b6a4_7
-  - flatbuffers=2.0.0=h2531618_0
   - gast=0.4.0=pyhd3eb1b0_0
   - giflib=5.2.1=h7b6447c_0
   - google-auth=1.33.0=pyhd3eb1b0_0
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.2.0=pyhd3eb1b0_0
-  - grpcio=1.36.1=py39h2157cd5_1
   - h5py=3.2.1=py39h6c542dc_0
   - hdf5=1.10.6=hb1b8bf9_0
   - icu=68.1=h2531618_0
@@ -48,6 +47,7 @@ dependencies:
   - intel-openmp=2021.3.0=h06a4308_3350
   - jpeg=9d=h7f8727e_0
   - keras-preprocessing=1.1.2=pyhd3eb1b0_0
+  - kernel-headers_linux-64=3.10.0=h57e8cba_10
   - krb5=1.19.2=hac12032_0
   - ld_impl_linux-64=2.35.1=h7274673_9
   - libcurl=7.78.0=h0b77cf5_0
@@ -78,7 +78,7 @@ dependencies:
   - numpy=1.20.3=py39hf144106_0
   - numpy-base=1.20.3=py39h74d4b33_0
   - oauthlib=3.1.1=pyhd3eb1b0_0
-  - openssl=1.1.1q=h7f8727e_0
+  - openssl=1.1.1t=h7f8727e_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
   - pandas=1.3.2=py39h8c16a72_0
   - protobuf=3.14.0=py39h2531618_1
@@ -92,7 +92,6 @@ dependencies:
   - pytables=3.6.1=py39h77479fe_1
   - python=3.9.7=h12debd9_1
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-flatbuffers=1.12=pyhd3eb1b0_0
   - pytz=2021.1=pyhd3eb1b0_0
   - pyyaml=5.4.1=py39h27cfd23_1
   - readline=8.1=h27cfd23_0
@@ -103,6 +102,7 @@ dependencies:
   - six=1.16.0=pyhd3eb1b0_0
   - snappy=1.1.8=he6710b0_0
   - sqlite=3.36.0=hc218d9a_0
+  - sysroot_linux-64=2.17=h57e8cba_10
   - tensorboard-plugin-wit=1.6.0=py_0
   - tensorflow-estimator=2.6.0=pyh7b7c402_0
   - termcolor=1.1.0=py39h06a4308_1
@@ -125,6 +125,7 @@ dependencies:
     - awkward0==0.15.5
     - backcall==0.2.0
     - calmjs-parse==1.3.0
+    - clang==5.0
     - cloudpickle==2.0.0
     - comet-ml==3.17.0
     - configobj==5.0.6
@@ -134,7 +135,8 @@ dependencies:
     - dulwich==0.20.25
     - everett==2.0.1
     - ez-setup==0.9
-    - hls4ml==0.6.0
+    - flatbuffers==1.12
+    - grpcio==1.51.3
     - ipython==7.28.0
     - jedi==0.18.0
     - joblib==1.0.1
@@ -157,7 +159,7 @@ dependencies:
     - pexpect==4.8.0
     - pickleshare==0.7.5
     - pillow==8.3.2
-    - pip==22.3.1
+    - pip==23.0.1
     - ply==3.11
     - prompt-toolkit==3.0.20
     - ptyprocess==0.7.0
@@ -167,18 +169,16 @@ dependencies:
     - pyparser==1.0
     - pyparsing==2.4.7
     - pyrsistent==0.18.0
-    - python-graphviz==0.19.1
     - qkeras==0.9.0
     - requests-toolbelt==0.9.1
     - scikit-learn==1.0
     - seaborn==0.11.2
     - semantic-version==2.8.5
-    - setuptools==65.5.0
+    - setuptools==67.4.0
     - tabulate==0.9.0
     - tensorboard==2.8.0
     - tensorboard-data-server==0.6.1
     - tensorflow==2.8.0
-    - tensorflow-decision-forests==0.2.4
     - tensorflow-io-gcs-filesystem==0.25.0
     - tensorflow-model-optimization==0.6.0
     - tensorflow-probability==0.14.0
@@ -192,4 +192,3 @@ dependencies:
     - websocket-client==1.2.1
     - wheel==0.37.1
     - wurlitzer==3.0.2
-prefix: /home/cebrown/anaconda3/envs/qtf
